iptables-save.txt
# Generated by iptables-save v1.8.11 (nf_tables) on Fri Apr  3 10:18:54 2026
*mangle
:PREROUTING ACCEPT [394805:531043943]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4028:694835]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Fri Apr  3 10:18:54 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Fri Apr  3 10:18:54 2026
*raw
:PREROUTING ACCEPT [395022:531097422]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.18.0.2/32 ! -i br-328877c9e1c7 -j DROP
-A PREROUTING -d 172.20.0.2/32 ! -i br-d372da3bff58 -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 1984 -j DROP
-A PREROUTING -d 172.18.0.3/32 ! -i br-328877c9e1c7 -j DROP
COMMIT
# Completed on Fri Apr  3 10:18:54 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Fri Apr  3 10:18:54 2026
*filter
:INPUT ACCEPT [2410:395692]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -j ts-input
-A FORWARD -j ts-forward
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER -d 172.18.0.2/32 ! -i br-328877c9e1c7 -o br-328877c9e1c7 -p tcp -m tcp --dport 1984 -j ACCEPT
-A DOCKER ! -i br-d372da3bff58 -o br-d372da3bff58 -j DROP
-A DOCKER ! -i br-328877c9e1c7 -o br-328877c9e1c7 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-d372da3bff58 -j DOCKER
-A DOCKER-BRIDGE -o br-328877c9e1c7 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-d372da3bff58 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-328877c9e1c7 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-d372da3bff58 -j ACCEPT
-A DOCKER-FORWARD -i br-101945e6e1b7 -o br-101945e6e1b7 -j ACCEPT
-A DOCKER-FORWARD -i br-328877c9e1c7 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-INTERNAL ! -s 172.19.0.0/16 -o br-101945e6e1b7 -j DROP
-A DOCKER-INTERNAL ! -d 172.19.0.0/16 -i br-101945e6e1b7 -j DROP
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.80.71.81/32 -i lo -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
COMMIT
# Completed on Fri Apr  3 10:18:54 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Fri Apr  3 10:18:54 2026
*nat
:PREROUTING ACCEPT [679:52698]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [434:34130]
:POSTROUTING ACCEPT [434:34130]
:DOCKER - [0:0]
:ts-postrouting - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-328877c9e1c7 -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-d372da3bff58 -j MASQUERADE
-A DOCKER -d 127.0.0.1/32 ! -i br-328877c9e1c7 -p tcp -m tcp --dport 1984 -j DNAT --to-destination 172.18.0.2:1984
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Fri Apr  3 10:18:54 2026
